# moveo_hardware_interface

./: CMakeLists.txt  moveo_hardware_interface.xml  package.xml  readme.md
arduino/arduino_comm_test/: arduino_comm_test.ino
include/moveo_hardware_interface/: arduino_comm.hpp  joint.hpp  moveo_hardware_interface.hpp  visibility_control.h
moveo_FW_HI/: moveo_FW_HI.ino
src/: arduino_comm.cpp  moveo_hardware_interface.cpp
test/: test_arduino_comm.cpp
